--- a/src/about_section.css
+++ b/src/about_section.css
@@ -1,23 +1,380 @@
 .section {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .section {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .section {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
 }
 
 .container {
   padding-left: 20px;
   padding-right: 20px;
   margin: 0 auto;
-
-  @include mobile {
+}
+@media screen and (max-width: 767px) {
+  .container {
     max-width: 480px;
   }
+}
 
-  @include tablet {
+@media screen and (min-width: 768px) {
+  .container {
     width: 768px;
     padding: 0 32px;
   }
+}
 
-  @include pc {
-    width: 1200px;
+@media screen and (min-width: 1300px) {
+  .container {
+    width: 1300px;
+  }
+}
+
+.about,
+.advantage {
+  background-color: #fff1bf;
+}
+.about__title,
+.advantage__title,
+.how-to__title {
+  color: #1a1b4b;
+  font-family: Neucha, sans-serif;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 1;
+  text-transform: capitalize;
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .about__title,
+  .advantage__title,
+  .how-to__title {
+    font-size: 60px;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1300px) {
+  .about__title,
+  .advantage__title,
+  .how-to__title {
+    font-size: 80px;
+    margin-bottom: 40px;
+  }
+}
+.about__wrapper {
+  display: block;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .about__wrapper {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 0;
+  }
+}
+
+.about-descr__col,
+.about-detail__col {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .about-descr__col,
+  .about-detail__col {
+    width: calc((100% - 20px) / 2);
+  }
+}
+.about-descr__text {
+  font-family: Nunito, sans-serif;
+  color: #1a1b4b;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.3;
+}
+.about-descr__text span {
+  color: #fb8500;
+  font-weight: 700;
+}
+.about-detail__text {
+  color: #1a1b4b;
+  font-family: Nunito, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.35; /* 29.7px */
+}
+.about-detail__text:not(:last-child) {
+  margin-bottom: 12px;
+}
+@media screen and (min-width: 768px) {
+  .about-descr__text {
+    font-size: 28px;
+  }
+  .about-detail__text {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .about-descr__text {
+    font-size: 35px;
+  }
+  .about-detail__text {
+    font-size: 22px;
+  }
+}
+
+.about-descr__img {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.about-detail__img {
+  margin-top: 10px;
+}
+@media screen and (min-width: 768px) {
+  .about-descr__img {
+    margin-top: 20px;
+    margin-bottom: 0;
+  }
+  .about-detail__img {
+    margin-top: 34px;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .about-descr__img {
+    margin-top: 50px;
+  }
+  .about-detail__img {
+    margin-top: 64px;
+  }
+}
+.advantage__wrapper {
+  display: block;
+}
+
+.advantage-list__wrapper {
+  width: 100%;
+  border-radius: 35px;
+  border: 1px solid #6a6a6a;
+  overflow: hidden;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+.advantage-list__wrapper:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.advantage__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+  max-width: 155px;
+}
+.advantage-item__title {
+  color: #fb8500;
+  font-family: Nunito, sans-serif;
+  font-size: 18px;
+
+  font-weight: 700;
+  line-height: 1; /* 22px */
+  text-transform: uppercase;
+  margin-bottom: 5px;
+}
+
+.advantage-item__text {
+  color: #1a1b4b;
+  font-family: Nunito, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.35; /* 29.7px */
+}
+.advantage-list__img {
+  display: flex;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .advantage__wrapper {
+    display: flex;
+    gap: 20px;
+  }
+  .advantage-list__wrapper {
+    width: calc((100% - 20px) / 2);
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+  }
+  .advantage-list__wrapper:not(:last-child) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .advantage-list__wrapper {
+    padding: 25px;
+    padding-bottom: 31px;
+    height: auto;
+  }
+
+  .advantage__list {
+    gap: 35px;
+    max-width: 353px;
+  }
+  .advantage-item__title {
+    font-size: 22px;
+    margin-bottom: 15px;
+  }
+
+  .advantage-item__text {
+    font-size: 22px;
+  }
+}
+
+.how-to {
+  background-color: #8ecae6;
+}
+
+.how-to__list {
+  display: block;
+  margin-top: 40px;
+}
+.howto-list__item {
+  width: 100%;
+  border-radius: 35px;
+  background-color: #fff1bf;
+  padding: 22px 25px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.howto-item__number {
+  position: absolute;
+  padding: 5px 30px;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff1bf;
+  border-radius: 25px;
+  color: #fb8500;
+  font-family: Nunito;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1; /* 35px */
+}
+.howto-item__text {
+  color: #1a1b4b;
+  text-align: center;
+  font-family: Nunito;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.35; /* 29.7px */
+}
+.howto-list__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.howto__button {
+  display: block;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background-color: #fb8500;
+  color: #fcfcfc;
+  display: flex;
+
+  align-items: center;
+  text-align: center;
+  font-family: Nunito;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.2; /* 26.4px */
+}
+
+.how-to__img-col {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .how-to__list {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    row-gap: 30px;
+  }
+  .howto-list__item {
+    width: calc((100% - 20px) / 2);
+    padding: 22px 22px;
+    margin-bottom: 0;
+  }
+
+  .howto-item__number {
+    font-size: 22px;
+  }
+  .howto-list__button {
+    width: calc((100% - 20px) / 2);
+  }
+  .howto__button {
+    width: 183px;
+    height: 183px;
+    font-size: 22px;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .how-to__wrapper {
+    display: flex;
+    gap: 20px;
+  }
+  .how-to__list-col {
+    width: 75%;
+  }
+  .how-to__list {
+    row-gap: 46px;
+  }
+  .howto-list__item {
+    width: calc((100% - 40px) / 3);
+    padding: 52px 22px;
+  }
+
+  .howto-item__number {
+    padding: 8px 42px;
+    font-size: 35px;
+  }
+  .howto-item__text {
+    font-size: 22px;
+  }
+  .howto-list__button {
+    width: calc((100% - 40px) / 3);
+  }
+  .how-to__img-col {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 25%;
+  }
+  .howto__lovely--img,
+  .howto__surprised--img {
+    margin-right: auto;
+  }
+  .howto__neutral--img {
+    margin-left: auto;
   }
 }
