--- a/src/home.css
+++ b/src/home.css
@@ -1,48 +1,3 @@
-.section {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-@media screen and (min-width: 768px) {
-  .section {
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
-}
-.btn {
-  cursor: pointer;
-  transition: transform ease-in 0.1s, box-shadow ease-in 0.25s;
-}
-
-@media screen and (min-width: 1300px) {
-  .section {
-    padding-top: 100px;
-    padding-bottom: 100px;
-  }
-}
-
-.container {
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 0 auto;
-}
-@media screen and (max-width: 767px) {
-  .container {
-    max-width: 480px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    width: 768px;
-    padding: 0 32px;
-  }
-}
-
-@media screen and (min-width: 1300px) {
-  .container {
-    width: 1300px;
-  }
-}
 
 .about,
 .advantage {
@@ -53,7 +8,8 @@
 .how-to__title,
 .plus__title,
 .galery__title,
-.try__title {
+.try__title,
+.stats__title {
   color: #1a1b4b;
   font-family: Neucha, sans-serif;
   font-size: 40px;
@@ -69,7 +25,8 @@
   .how-to__title,
   .plus__title,
   .galery__title,
-  .try__title {
+  .try__title,
+  .stats__title {
     font-size: 60px;
     margin-bottom: 30px;
   }
@@ -80,7 +37,8 @@
   .how-to__title,
   .plus__title,
   .galery__title,
-  .try__title {
+  .try__title,
+  .stats__title {
     font-size: 80px;
     margin-bottom: 40px;
   }
